# Autonomous-Inspection-POC

./: .gitignore  README.md  temp.py
docs/: Installation_Guide.md
feature_matching/: DATABASE_coordinates.csv  DATABASE_coordinates_test.csv  package.xml  setup.cfg  setup.py
feature_matching_v2/: package.xml  setup.cfg  setup.py
gazebo/: CMakeLists.txt  package.xml
gazebo/config/: ekf.yaml
gazebo/env-hooks/: gazebo.sh.in
gazebo/launch/: dolly.launch.py  iBot.launch.py  iBot_urdf.launch.py  iBot_urdf_test.launch.py  iBot_world.launch.py  state_pub_rob_loc.launch.py  test.launch.py
gazebo/models/aircraft/: model.config  model.sdf
gazebo/models/camera_plugin/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
gazebo/models/cessna/: model.sdf
gazebo/models/cessna/meshes/: Cessna.mtl
gazebo/models/cessna_artificial_plane/meshes/: CessnaArtificialPlane.mtl
gazebo/models/cessna_image_2/: model.config
gazebo/models/cessna_image_3/materials/scripts/: cessna_image_3.material
gazebo/models/cessna_image_4/: model.config
gazebo/models/cessna_plane/: model.sdf
gazebo/models/cessna_plane/materials/scripts/: cessna_plane.material
gazebo/models/dolly/: model.sdf
gazebo/models/iBot/: iBot.gazebo  iBot.urdf  iBot.urdf.xacro  model.config  model.sdf
gazebo/models/iBot/meshes/: camera.mtl  chassis.SLDPRT  chassis.STL  chassis.mtl  wheel.mtl  wheel3.mtl
gazebo/models/urdf/: iBot.gazebo  iBot.gv
gazebo/urdf/: iBot.gazebo  iBot.urdf  iBot.urdf.xacro
gazebo/worlds/: aircraft1.world  artificial_plane.world  dolly_empty.world  empty_area.world  empty_world_with_spotlights.world  iBot.world
install/: local_setup.sh  setup.sh
log/: latest_build
(+140 files in other folders)
